--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TQbTgBYASsQU",
-        "outputId": "b827decf-f37f-4ccf-a772-e6f316dd4e43"
+        "outputId": "eb87d88f-be04-4669-bc06-6398f4292198"
       },
       "outputs": [
         {
@@ -52,41 +52,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# Basic string manipulations\n",
-        "\n",
-        "# Define strings\n",
+        "#Basic string manipulations\n",
+        "#Define strings\n",
         "str1 = \"Hello\"\n",
         "str2 = \"World\"\n",
         "\n",
-        "# Concatenate the strings\n",
+        "#Concatenate the strings\n",
         "str3 = str1 + \" \" + str2\n",
         "print(\"Concatenated string:\", str3)\n",
         "\n",
-        "# Repeat a string\n",
+        "#Repeat a string\n",
         "str4 = str1 * 3\n",
         "print(\"Repeated string:\", str4)\n",
         "\n",
-        "# Access a character by index\n",
+        "#Access a character by index\n",
         "print(\"Character at index 1:\", str1[1])\n",
         "\n",
-        "# Slice a substring\n",
+        "#Slice a substring\n",
         "print(\"Substring from index 1 to 3:\", str1[1:3])\n",
         "\n",
-        "# Find the length of a string\n",
+        "#Find the length of a string\n",
         "print(\"Length of string:\", len(str1))\n",
         "\n",
-        "# Convert a string to uppercase\n",
+        "#Convert a string to uppercase\n",
         "print(\"Uppercase string:\", str1.upper())\n",
         "\n",
-        "# Convert a string to lowercase\n",
+        "#Convert a string to lowercase\n",
         "print(\"Lowercase string:\", str1.lower())\n",
         "\n",
-        "# Remove whitespace from both sides of a string\n",
+        "#Remove whitespace from both sides of a string\n",
         "str5 = \"   Hello World   \"\n",
         "print(\"String with whitespace:\", str5)\n",
         "print(\"String without whitespace:\", str5.strip())\n",
         "\n",
-        "# Replace a substring\n",
+        "#Replace a substring\n",
         "print(\"Replaced String:\", str1.replace(\"Hello\", \"Goodbye\"))\n"
       ],
       "metadata": {
@@ -94,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h6-Mb1FBU48n",
-        "outputId": "6ef7f708-ad57-40cd-9d5b-3b41f6df296b"
+        "outputId": "fc196dd0-79e8-47a3-f8cf-e1dbe53aa116"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +110,7 @@
             "Lowercase string: hello\n",
             "String with whitespace:    Hello World   \n",
             "String without whitespace: Hello World\n",
-            "String with replaced substring: Goodbye\n"
+            "Replaced String: Goodbye\n"
           ]
         }
       ]
@@ -119,8 +118,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Basic conditional statements\n",
-        "\n",
+        "#basic conditional statements\n",
         "x = 10\n",
         "y = 5\n",
         "\n",
@@ -131,7 +129,7 @@
         "else:\n",
         "  print(\"x is equal to y\")\n",
         "\n",
-        "# Code 2\n",
+        "#Code 2\n",
         "\n",
         "age = 18\n",
         "\n",
@@ -145,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fcNd97cQU5q-",
-        "outputId": "219c1f25-c8ff-4e06-cfcd-926794092651"
+        "outputId": "44a534cd-20e3-453c-ce04-948e1875cc11"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,9 +179,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CpRKRzPiU5zA",
-        "outputId": "55830411-9ef3-43db-ce39-557cbc99f587"
+        "outputId": "e26e1589-9438-4661-c634-c54c73238cb2"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,9 +214,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "neA_4AmuU58G",
-        "outputId": "1b723b66-c279-43e0-ab93-122aef399221"
+        "outputId": "728575d1-1d03-4a4a-a1b5-b663f107e944"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,9 +253,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "khiLPBDwU6UU",
-        "outputId": "a348d237-7e6b-416c-cc2c-b6a566ea0cd2"
+        "outputId": "311c91bc-2421-4afe-f57e-9e09d2ef212f"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
